--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,12 @@
     <string name="app_name">Little Zilla</string>
     <string name="little_zilla">Little Zilla</string>
     <string name="banner_images">Images loaded from Firebase</string>
+
+    //drawing
+    <string name="action_settings">Settings</string>
+    <string name="start_new">New</string>
+    <string name="brush">Brush</string>
+    <string name="erase">Erase</string>
+    <string name="save">Save</string>
+    <string name="paint">Paint</string>
 </resources>
