--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,9 @@
     <string name="little_zilla">Little Zilla</string>
     <string name="banner_images">Images loaded from Firebase</string>
 
+    <string name="open">Open</string>
+    <string name="close">Close</string>
+
     //drawing
     <string name="action_settings">Settings</string>
     <string name="start_new">New</string>
